--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -16,7 +16,7 @@
   <!-- Our custom CSS -->
   <link rel="stylesheet" href="index.css">
   <title>Frontend Mentor | Space tourism website</title>
-  <script src="index.js" defer></script>
+  <script src="navigation.js" defer></script>
 </head>
 
 
@@ -34,7 +34,7 @@
               aria-hidden="true">00</span>Home</a>
         <li><a class="ff-sans-cond uppercase text-white letter-spacing-2" href="destination.html"><span
               aria-hidden="true">01</span>Destination</a>
-        <li><a class="ff-sans-cond uppercase text-white letter-spacing-2" href="crew.html"><span
+        <li><a class="ff-sans-cond uppercase text-white letter-spacing-2" href="crew-commander.html"><span
               aria-hidden="true">02</span>Crew</a>
         <li><a class="ff-sans-cond uppercase text-white letter-spacing-2" href="technology.html"><span
               aria-hidden="true">03</span>Technology</a>
