Working on Technology interaction

--- a/starter-code/design-system.html
+++ b/starter-code/design-system.html
@@ -144,6 +144,12 @@
                     </div>
 
                     <!-- Numbers -->
+                    <div class="number-indicators grid">
+                        <button aria-selected="true">1</button>
+                        <button aria-selected="false">2</button>
+                        <button aria-selected="true">3</button>
+
+                    </div>
                 </div>
             </div>
 
