--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -12,7 +12,8 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@400;700&family=Bellefair&family=Barlow:wght@400;700&display=swap"
     rel="stylesheet">
-
+  <link href="https://fonts.googleapis.com/css2?family=Francois+One&family=Inter:wght@100;200;400;700;800&display=swap"
+    rel="stylesheet" />
   <!-- Our custom CSS -->
   <link rel="stylesheet" href="index.css">
   <title>Frontend Mentor | Space tourism website</title>
@@ -24,7 +25,7 @@
   <a class="skip-to-content" href="#main">Skip to content</a>
   <header class="primary-header flex">
     <div>
-      <img src="./assets/shared/logo.svg" alt="space tourism logo" class="logo">
+      <img src="./assets/shared/logo.png" alt="Pigeon DAO logo" class="logo">
     </div>
     <button class="mobile-nav-toggle" aria-controls="primary-navigation"><span class="sr-only"
         aria-expanded="false">Menu</span></button>
@@ -33,11 +34,11 @@
         <li class="active"><a class="ff-sans-cond uppercase text-white letter-spacing-2" href="index.html"><span
               aria-hidden="true">00</span>Home</a>
         <li><a class="ff-sans-cond uppercase text-white letter-spacing-2" href="destination.html"><span
-              aria-hidden="true">01</span>Destination</a>
+              aria-hidden="true">01</span>Explore</a>
         <li><a class="ff-sans-cond uppercase text-white letter-spacing-2" href="crew-commander.html"><span
-              aria-hidden="true">02</span>Crew</a>
+              aria-hidden="true">02</span>Send</a>
         <li><a class="ff-sans-cond uppercase text-white letter-spacing-2" href="technology.html"><span
-              aria-hidden="true">03</span>Technology</a>
+              aria-hidden="true">03</span>Drive</a>
       </ul>
     </nav>
   </header>
@@ -46,16 +47,16 @@
   <main id="main" class="grid-container grid-container--home">
 
     <div>
-      <h1 class="text-accent fs-500 ff-sans-cond uppercase letter-spacing-1">So, you want to travel to
-        <span class="d-block fs-900 ff-serif text-white">Space</span>
+      <h1 class="text-accent fs-500 ff-sans-cond uppercase letter-spacing-2">The decentralized delivery protocol.
+      </h1>
+      <span class="d-block fs-900 ff-serif text-white uppercase">Pigeon DAO</span>
       </h1>
 
-      <p>Let’s face it; if you want to go to space, you might as well genuinely go to
-        outer space and not hover kind of on the edge of it. Well sit back, and relax
-        because we’ll give you a truly out of this world experience! </p>
+      <p>Get your package delivered anywhere around the world by anyone. We are building a peer to peer courier network
+        to represent exchange and transfers of assets using Web3 Protocols.</p>
     </div>
     <div>
-      <a href="destination.html" class="large-button uppercase ff-serif text-dark bg-white">Explore</a>
+      <a href="destination.html" class="large-button uppercase ff-serif text-dark bg-white">Application</a>
     </div>
   </main>
 
