--- a/starter-code/crew.html
+++ b/starter-code/crew.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="dark" style="color-scheme: dark;">
 
 <head>
   <meta charset="UTF-8">
@@ -24,7 +24,7 @@
   <a class="skip-to-content" href="#main">Skip to content</a>
   <header class="primary-header flex">
     <div>
-      <img src="./assets/shared/logo.svg" alt="space tourism logo" class="logo">
+      <img src="./assets/shared/logo.png" alt="Pigeon DAO logo" class="logo">
     </div>
     <button class="mobile-nav-toggle" aria-controls="primary-navigation"><span class="sr-only"
         aria-expanded="false">Menu</span></button>
