--- a/starter-code/design-system.html
+++ b/starter-code/design-system.html
@@ -1,4 +1,4 @@
-<html>
+<html lang="en" data-theme="dark" style="color-scheme: dark;">
 
 <head>
     <title>Design system</title>
@@ -20,28 +20,40 @@
 <body>
 
     <div class="container flow">
-        <h1 class="uppercase">Design system</h1>
-
+        <div class="flex">
+            <h1 class="uppercase">Pigeon Dao</h1>
+            <h1 class="uppercase">Design system</h1>
+        </div>
         <section class="flow" id="colors" style="margin: 4rem 0">
             <h2 class="numbered-title"><span>01</span> colors</h2>
             <div class="flex">
                 <div class="flow" style="flex-grow: 1;">
                     <div class="bg-dark text-white ff-serif fs-500"
-                        style="padding: 3rem 1rem 1rem; border: 1px solid white">#0B0D17</div>
-                    <p><span class="text-accent">RGB</span> 11, 13, 23</p>
-                    <p><span class="text-accent">HSL</span> 230°, 35%, 7%</p>
+                        style="padding: 3rem 1rem 1rem; border: 1px solid white">#071422</div>
+                    <p><span class="text-accent">RGB</span> 7, 20, 34</p>
+                    <p><span class="text-accent">HSL</span> 212°, 65%, 8%;</p>
+                    <p><span class="text-accent">CSS:</span> Background</p>
                 </div>
                 <div class="flow" style="flex-grow: 1;">
                     <div class="bg-accent text-dark ff-serif fs-500"
-                        style="padding: 3rem 1rem 1rem; border: 1px solid white">#D0D6F9</div>
-                    <p><span class="text-accent">RGB</span> 208, 214, 249</p>
-                    <p><span class="text-accent">HSL</span> 231°, 77%, 90%</p>
+                        style="padding: 3rem 1rem 1rem; border: 1px solid white">#19809F</div>
+                    <p><span class="text-accent">RGB</span> 25, 128, 159</p>
+                    <p><span class="text-accent">HSL</span> 194°, 73%, 36%</p>
+                    <p><span class="text-accent">CSS:</span> Primary</p>
                 </div>
                 <div class="flow" style="flex-grow: 1;">
-                    <div class="bg-white text-dark ff-serif fs-500"
-                        style="padding: 3rem 1rem 1rem; border: 1px solid white;">#FFFFFF</div>
-                    <p><span class="text-accent">RGB</span> 255, 255, 255</p>
-                    <p><span class="text-accent">HSL</span> 0°, 0%, 100%</p>
+                    <div class="bg-secondary text-white ff-serif fs-500"
+                        style="padding: 3rem 1rem 1rem; border: 1px solid white;">#228496</div>
+                    <p><span class="text-accent">RGB</span> 34, 132, 150</p>
+                    <p><span class="text-accent">HSL</span> 189°, 63%, 36%</p>
+                    <p><span class="text-accent">CSS:</span> Secondary</p>
+                </div>
+                <div class="flow" style="flex-grow: 1;">
+                    <div class="bg-dark text-white ff-serif fs-500"
+                        style="padding: 3rem 1rem 1rem; border: 1px solid white">#071422
+                    </div>
+                    <p><span class="text-accent">RGB</span> 7, 20, 34</p>
+                    <p><span class="text-accent">HSL</span> 212°, 65%, 8%;</p>
                 </div>
             </div>
         </section>
@@ -52,24 +64,26 @@
                 <div class="flow" style="flex-basis: 100%; --flow-space: 4rem;">
                     <div>
                         <p class="text-accent">Heading 1 - Bellefair Regular - 150px</p>
-                        <p class="fs-900 ff-serif uppercase">Earth</p>
+                        <p class="fs-900 ff-serif uppercase">Pigeon</p>
+                        <p class="fs-800 ff-serif ">Pigeon</p>
+                        <p class="fs-700 ff-inter ">Pigeon</p>
                     </div>
                     <div>
                         <p class="text-accent">Heading 2 - Bellefair Regular - 100px</p>
-                        <p class="fs-800 ff-serif uppercase">Venus</p>
+                        <p class="fs-800 ff-serif uppercase">Pigeon</p>
                     </div>
                     <div>
                         <p class="text-accent">Heading 3 - Bellefair Regular - 56px</p>
-                        <p class="fs-700 ff-serif uppercase">Jupiter & Saturn</p>
+                        <p class="fs-700 ff-serif uppercase">Pigeon</p>
                     </div>
                     <div>
                         <p class="text-accent">Heading 4 - Bellefair Regular - 32px</p>
-                        <p class="fs-600 ff-serif uppercase">Uranus, Neptune, & Pluto</p>
+                        <p class="fs-600 ff-serif uppercase">Explore, Send, & Drive</p>
                     </div>
                     <div>
                         <p class="text-accent">Heading 5 - Barlow Condensed Regular - 28px - 4.75 Character Space</p>
-                        <p class="text-accent fs-500 ff-sans-cond uppercase letter-spacing-1">So, you want to travel to
-                            space</p>
+                        <p class="text-accent fs-500 ff-sans-cond uppercase letter-spacing-1">Welcome to the
+                            decentralized courier network</p>
                     </div>
 
                 </div>
@@ -122,7 +136,7 @@
             <div class="flex">
                 <div style="margin-top: 5rem">
                     <!-- explore button -->
-                    <a href="#" class="large-button uppercase ff-serif fs-600 text-dark bg-white">Explore</a>
+                    <a href="#" class="large-button uppercase ff-serif fs-600 text-dark bg-white">Application</a>
                 </div>
 
                 <div class="flow" style="margin-bottom: 50vh; --flow-space: 4rem">
