Recreated background images + Will work on recreating splash photo assets

--- a/starter-code/drive.html
+++ b/starter-code/drive.html
@@ -15,7 +15,7 @@
 
     <!-- Our custom CSS -->
     <link rel="stylesheet" href="index.css">
-    <title>Frontend Mentor | Space tourism website</title>
+    <title>Pigeon DAO | Drive and Deliver Packages</title>
     <script src="navigation.js" defer></script>
     <script src="tabs.js" defer></script>
 </head>
@@ -32,12 +32,14 @@
             <ul id="primary-navigation" data-visible="false" class="primary-navigation underline-indicators flex">
                 <li><a class="ff-sans-cond uppercase text-white letter-spacing-2" href="index.html"><span
                             aria-hidden="true">00</span>Home</a>
-                <li><a class="ff-sans-cond uppercase text-white letter-spacing-2" href="destination.html"><span
-                            aria-hidden="true">01</span>Destination</a>
-                <li><a class="ff-sans-cond uppercase text-white letter-spacing-2" href="crew.html"><span
-                            aria-hidden="true">02</span>Crew</a>
-                <li class="active"><a class="ff-sans-cond uppercase text-white letter-spacing-2"
-                        href="technology.html"><span aria-hidden="true">03</span>Technology</a>
+                <li><a class="ff-sans-cond uppercase text-white letter-spacing-2" href="explore.html"><span
+                            aria-hidden="true">01</span>Explore</a>
+                <li><a class="ff-sans-cond uppercase text-white letter-spacing-2" href="send.html"><span
+                            aria-hidden="true">02</span>Send</a>
+                <li class="active"><a class="ff-sans-cond uppercase text-white letter-spacing-2" href="drive.html"><span
+                            aria-hidden="true">03</span>Drive</a>
+                <li><a class="ff-sans-cond uppercase text-white letter-spacing-2" target="_blank"
+                        href="https://docs.pigeondao.org/"><span aria-hidden="true">04</span>Docs</a>
             </ul>
         </nav>
     </header>
@@ -47,7 +49,7 @@
 
 
     <main id="main" class="grid-container grid-container--technology flow">
-        <h1 class="numbered-title"><span aria-hidden="true">03</span>Space Launch 101</h1>
+        <h1 class="numbered-title"><span aria-hidden="true">03</span>Drive with Pigeon DAO</h1>
 
 
 
@@ -64,46 +66,46 @@
 
         </div>
 
-        <!-- Launch Vehicle -->
+        <!-- Launch Vehicle / 99.3% -->
         <article class="technology-details flow" id="launch-tab" role="tabpanel" tabindex="0">
             <header class="flow flow--space-small letter-spacing-3">
-                <p class="fs-400 ff-sans-cond uppercase text-accent">The Terminology...</p>
-                <h1 class="fs-700 uppercase ff-serif text-white">Launch Vehicle</h1>
+
+                <p class="fs-400 ff-sans-cond uppercase text-accent"><span class="text-white">The beauty of </span>The
+                    Smart Contract</p>
+
+                <h3 class="fs-700 uppercase ff-serif text-white">Keep 99.3% of your earnings</h3>
             </header>
-            <p class="fs-400 text-accent ff-sans-cond letter-spacing-3">A space capsule is an often-crewed spacecraft
-                that uses a blunt-body reentry
-                capsule to reenter the Earth's atmosphere without wings. Our capsule is where
-                you'll spend your time during the flight. It includes a space gym, cinema,
-                and plenty of other activities to keep you entertained.</p>
+            <p class="fs-400 text-accent ff-sans-cond letter-spacing-3">Because our smart contracts are binding only
+                between The Driver and The User, payments are able to be directly transferred to your wallet within a
+                few minutes of the delivery. Pigeon is the only courier network with near instant payout, drive when you
+                want and keep what you've worked for. Pigeon simply facilitates the platform, but you're in control of
+                your business.</p>
         </article>
 
         <!-- Spaceport -->
         <article hidden class="technology-details flow" id="spaceport-tab" role="tabpanel" tabindex="0">
             <header class="flow flow--space-small letter-spacing-3">
-                <p class="fs-400 ff-sans-cond uppercase text-accent">The Terminology...</p>
-                <h1 class="fs-700 uppercase ff-serif text-white">Spaceport</h1>
+                <p class="fs-400 ff-sans-cond uppercase text-accent"><span class="text-white">The beauty of </span>The
+                    DAO LLC</p>
+                <h3 class="fs-700 uppercase ff-serif text-white">Own Pigeon & Become your own contractor</h3>
             </header>
-            <p class="fs-400 text-accent ff-sans-cond letter-spacing-3">A spaceport or cosmodrome is a site for
-                launching (or receiving) spacecraft,
-                by analogy to the seaport for ships or airport for aircraft. Based in the
-                famous Cape Canaveral, our spaceport is ideally situated to take advantage
-                of the Earth’s rotation for launch.</p>
+            <p class="fs-400 text-accent ff-sans-cond letter-spacing-3">Because our DAO LLC is owned and operated
+                through token distribution and ownership, drivers may receive compensation through our Utility coin, in
+                which can represent voting power and ownership of the company and it's growth and direction. Our
+                platform is made by the people, for the people.</p>
         </article>
 
         <!-- Space Capsule -->
         <article hidden class="technology-details flow" id="space-tab" role="tabpanel" tabindex="0">
             <header class="flow flow--space-small letter-spacing-3">
-                <p class="fs-400 ff-sans-cond uppercase text-accent">The Terminology...</p>
-                <h1 class="fs-700 uppercase ff-serif text-white">Space capsule</h1>
+                <p class="fs-400 ff-sans-cond uppercase text-accent"><span class="text-white">The beauty of </span>The
+                    Blockchain</p>
+                <h3 class="fs-700 uppercase ff-serif text-white">Proof of Delivery</h3>
             </header>
-            <p class="fs-400 text-accent ff-sans-cond letter-spacing-3">A space capsule is an often-technologyed
-                spacecraft
-                that uses a
-                blunt-body
-                reentry
-                capsule to reenter the Earth's atmosphere without wings. Our capsule is where
-                you'll spend your time during the flight. It includes a space gym, cinema,
-                and plenty of other activities to keep you entertained.</p>
+            <p class="fs-400 text-accent ff-sans-cond letter-spacing-3">Although this concept may seem unneccessary for
+                most, Pigeon stamps permanent proof of package delivery on the blockchain. This enables drivers like
+                you, and millions more, to create an outstanding resumes with certainty that you have completed your
+                fulfillment.</p>
         </article>
 
 
