--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -16,7 +16,7 @@
     rel="stylesheet" />
   <!-- Our custom CSS -->
   <link rel="stylesheet" href="index.css">
-  <title>Frontend Mentor | Space tourism website</title>
+  <title>Pigeon DAO | Home of the Decentralized Courier Network</title>
   <script src="navigation.js" defer></script>
 </head>
 
@@ -33,12 +33,14 @@
       <ul id="primary-navigation" data-visible="false" class="primary-navigation underline-indicators flex">
         <li class="active"><a class="ff-sans-cond uppercase text-white letter-spacing-2" href="index.html"><span
               aria-hidden="true">00</span>Home</a>
-        <li><a class="ff-sans-cond uppercase text-white letter-spacing-2" href="destination.html"><span
+        <li><a class="ff-sans-cond uppercase text-white letter-spacing-2" href="explore.html"><span
               aria-hidden="true">01</span>Explore</a>
-        <li><a class="ff-sans-cond uppercase text-white letter-spacing-2" href="crew-commander.html"><span
+        <li><a class="ff-sans-cond uppercase text-white letter-spacing-2" href="send.html"><span
               aria-hidden="true">02</span>Send</a>
-        <li><a class="ff-sans-cond uppercase text-white letter-spacing-2" href="technology.html"><span
+        <li><a class="ff-sans-cond uppercase text-white letter-spacing-2" href="drive.html"><span
               aria-hidden="true">03</span>Drive</a>
+        <li><a class="ff-sans-cond uppercase text-white letter-spacing-2" target="_blank"
+            href="https://docs.pigeondao.org/"><span aria-hidden="true">04</span>Docs</a>
       </ul>
     </nav>
   </header>
@@ -56,7 +58,7 @@
         to represent exchange and transfers of assets using Web3 Protocols.</p>
     </div>
     <div>
-      <a href="destination.html" class="large-button uppercase ff-serif text-dark bg-white">Application</a>
+      <a href="https://app.pigeondao.org/" class="large-button uppercase ff-serif text-dark bg-white">Application</a>
     </div>
   </main>
 
