--- a/starter-code/send.html
+++ b/starter-code/send.html
@@ -15,7 +15,7 @@
 
   <!-- Our custom CSS -->
   <link rel="stylesheet" href="index.css">
-  <title>Frontend Mentor | Space tourism website</title>
+  <title>Pigeon DAO | Send Packages & Other Services</title>
   <script src="navigation.js" defer></script>
   <script src="tabs.js" defer></script>
 </head>
@@ -32,19 +32,21 @@
       <ul id="primary-navigation" data-visible="false" class="primary-navigation underline-indicators flex">
         <li><a class="ff-sans-cond uppercase text-white letter-spacing-2" href="index.html"><span
               aria-hidden="true">00</span>Home</a>
-        <li><a class="ff-sans-cond uppercase text-white letter-spacing-2" href="destination.html"><span
-              aria-hidden="true">01</span>Destination</a>
-        <li class="active"><a class="ff-sans-cond uppercase text-white letter-spacing-2" href="crew.html"><span
-              aria-hidden="true">02</span>Crew</a>
-        <li><a class="ff-sans-cond uppercase text-white letter-spacing-2" href="technology.html"><span
-              aria-hidden="true">03</span>Technology</a>
+        <li><a class="ff-sans-cond uppercase text-white letter-spacing-2" href="explore.html"><span
+              aria-hidden="true">01</span>Explore</a>
+        <li class="active"><a class="ff-sans-cond uppercase text-white letter-spacing-2" href="send.html"><span
+              aria-hidden="true">02</span>Send</a>
+        <li><a class="ff-sans-cond uppercase text-white letter-spacing-2" href="drive.html"><span
+              aria-hidden="true">03</span>Drive</a>
+        <li><a class="ff-sans-cond uppercase text-white letter-spacing-2" target="_blank"
+            href="https://docs.pigeondao.org/"><span aria-hidden="true">04</span>Docs</a>
       </ul>
     </nav>
   </header>
 
 
   <main id="main" class="grid-container grid-container--crew flow">
-    <h1 class="numbered-title"><span aria-hidden="true">02</span> Meet your crew</h1>
+    <h1 class="numbered-title"><span aria-hidden="true">02</span> Send your package with Pigeon DAO</h1>
 
 
 
@@ -61,49 +63,48 @@
           class="sr-only">The crew engineer</span></button>
     </div>
 
-    <!-- commander -->
+    <!-- 1-25LBs -->
     <article class="crew-details flow" id="commander-tab" role="tabpanel" tabindex="0">
       <header class="flow flow--space-small">
-        <h2 class="fs-600 ff-serif uppercase">Commander</h2>
-        <p class="fs-700 uppercase ff-serif">Douglas Hurley</p>
+        <h3 class="text-accent fs-600 ff-serif uppercase">1 - 25 LB's</h3>
+        <p class="fs-700 uppercase ff-serif">Food / Groceries Pickup</p>
       </header>
-      <p>Douglas Gerald Hurley is an American engineer, former Marine Corps pilot
-        and former NASA astronaut. He launched into space for the third time as
-        commander of Crew Dragon Demo-2.</p>
+      <p>Get food from your favorite restaurant, or get your groceries off the shelf. Our protocol enables you to be in
+        complete control for what you'd like picked up and delivered. Please follow community guidelines and procedures
+        to ensure your safety in a decentralized network.</p>
     </article>
 
     <!-- mission specialist -->
     <article hidden class="crew-details flow" id="mission-tab" role="tabpanel" tabindex="0">
       <header class="flow flow--space-small">
-        <h2 class="fs-600 ff-serif uppercase">Mission Specialist</h2>
-        <p class="fs-700 uppercase ff-serif">Mark SHuttleworth</p>
+        <h3 class="text-accent fs-600 ff-serif uppercase">1 - 75 LB's</h3>
+        <p class="fs-700 uppercase ff-serif">Packages / Commerce </p>
       </header>
-      <p>Mark Richard Shuttleworth is the founder and CEO of Canonical, the company behind
-        the Linux-based Ubuntu operating system. Shuttleworth became the first South
-        African to travel to space as a space tourist.</p>
+      <p>The core mission of Pigeon DAO is to be able to successfully and consistently deliver your packages and your
+        commerce to your clients, customers, friends and family. Let us enable your business to utilize crypto while
+        providing often same day deliveries and immediate payments to your courier. </p>
     </article>
 
     <!-- pilot -->
     <article hidden class="crew-details flow" id="pilot-tab" role="tabpanel" tabindex="0">
       <header class="flow flow--space-small">
-        <h2 class="fs-600 ff-serif uppercase">Pilot</h2>
-        <p class="fs-700 uppercase ff-serif">Victor Glover</p>
+        <h3 class="text-accent fs-600 ff-serif uppercase">1 - 250+ LB's</h3>
+        <p class="fs-700 uppercase ff-serif">Business Commerce / Pallets</p>
       </header>
-      <p>Pilot on the first operational flight of the SpaceX Crew Dragon to the
-        International Space Station. Glover is a commander in the U.S. Navy where
-        he pilots an F/A-18.He was a crew member of Expedition 64, and served as a
-        station systems flight engineer.</p>
+      <p>Drivers may often use a truck or trailer bed to ensure your commerce and pallets are delivered promptly. If you
+        need access to an open bed vehicle, you're in complete control of who delivers for you, just select which driver
+        you'd like to work with.</p>
     </article>
 
     <!-- engineer -->
     <article hidden class="crew-details flow" id="crew-tab" role="tabpanel" tabindex="0">
       <header class="flow flow--space-small">
-        <h2 class="fs-600 ff-serif uppercase">Flight Engineer</h2>
-        <p class="fs-700 uppercase ff-serif">Anousheh Ansari</p>
+        <h3 class="text-accent fs-600 ff-serif uppercase">100+ LB's </h3>
+        <p class="fs-700 uppercase ff-serif">Industrial Equipment and Commerce</p>
       </header>
-      <p>Anousheh Ansari is an Iranian American engineer and co-founder of Prodea Systems.
-        Ansari was the fourth self-funded space tourist, the first self-funded woman to
-        fly to the ISS, and the first Iranian in space.</p>
+      <p>As Pigeon continues to develop and grow into a globally sustainable courier network, couriers and CDL truckers
+        may provide larger vehicles and more space required for your industrial goods, materials and equipments to be
+        safely transported, please provide specific requirements when listing a larger sized package.</p>
     </article>
 
 
