--- a/starter-code/explore.html
+++ b/starter-code/explore.html
@@ -15,7 +15,7 @@
 
   <!-- Our custom CSS -->
   <link rel="stylesheet" href="index.css">
-  <title>Frontend Mentor | Space tourism website</title>
+  <title>Pigeon DAO | Explore Listings</title>
   <script src="navigation.js" defer></script>
   <script src="tabs.js" defer></script>
 </head>
@@ -32,62 +32,65 @@
       <ul id="primary-navigation" data-visible="false" class="primary-navigation underline-indicators flex">
         <li><a class="ff-sans-cond uppercase text-white letter-spacing-2" href="index.html"><span
               aria-hidden="true">00</span>Home</a>
-        <li class="active"><a class="ff-sans-cond uppercase text-white letter-spacing-2" href="destination.html"><span
-              aria-hidden="true">01</span>Destination</a>
-        <li><a class="ff-sans-cond uppercase text-white letter-spacing-2" href="crew.html"><span
-              aria-hidden="true">02</span>Crew</a>
-        <li><a class="ff-sans-cond uppercase text-white letter-spacing-2" href="technology.html"><span
-              aria-hidden="true">03</span>Technology</a>
+        <li class="active"><a class="ff-sans-cond uppercase text-white letter-spacing-2" href="explore.html"><span
+              aria-hidden="true">01</span>Explore</a>
+        <li><a class="ff-sans-cond uppercase text-white letter-spacing-2" href="send.html"><span
+              aria-hidden="true">02</span>Send</a>
+        <li><a class="ff-sans-cond uppercase text-white letter-spacing-2" href="drive.html"><span
+              aria-hidden="true">03</span>Drive</a>
+        <li><a class="ff-sans-cond uppercase text-white letter-spacing-2" target="_blank"
+            href="https://docs.pigeondao.org/"><span aria-hidden="true">04</span>Docs</a>
       </ul>
     </nav>
   </header>
 
   <main id="main" class="grid-container grid-container--destination flow">
-    <h1 class="numbered-title"><span aria-hidden="true">01</span> Pick your destination</h1>
+    <!-- Create 4 icons to view all listings - 1. Packages 2. Food off the shelf? 3. Commercial 4. Industrial -->
+    <h1 class="numbered-title"><span aria-hidden="true">01</span> View all listings</h1>
 
 
 
 
     <div class="tab-list underline-indicators flex" role="tablist" aria-label="destination list">
       <button aria-selected="true" role="tab" aria-controls="moon-tab"
-        class="uppercase ff-sans-cond text-accent letter-spacing-2" tabindex="0" data-image="moon-image">Moon</button>
+        class="uppercase ff-sans-cond text-accent letter-spacing-2" tabindex="0" data-image="moon-image">Recent</button>
       <button aria-selected="false" role="tab" aria-controls="mars-tab"
-        class="uppercase ff-sans-cond text-accent letter-spacing-2" tabindex="-1" data-image="mars-image">Mars</button>
+        class="uppercase ff-sans-cond text-accent letter-spacing-2" tabindex="-1"
+        data-image="mars-image">Filters</button>
       <button aria-selected="false" role="tab" aria-controls="europa-tab"
         class="uppercase ff-sans-cond text-accent letter-spacing-2" tabindex="-1"
-        data-image="europa-image">Europa</button>
+        data-image="europa-image">Sorting</button>
       <button aria-selected="false" role="tab" aria-controls="titan-tab"
-        class="uppercase ff-sans-cond text-accent letter-spacing-2" tabindex="-1"
-        data-image="titan-image">Titan</button>
+        class="uppercase ff-sans-cond text-accent letter-spacing-2" tabindex="-1" data-image="titan-image">Size</button>
     </div>
 
-    <!-- The moon -->
+    <!-- The moon / Recent Listings -->
     <article class="destination-info flow" id="moon-tab" tabindex="0" role="tabpanel">
-      <h2 class="fs-800 uppercase ff-serif">Moon</h2>
+      <h2 class="fs-700 uppercase text-secondary ff-serif">Recent Listings</h2>
 
-      <p>See our planet as you’ve never seen it before. A perfect relaxing trip away to help
-        regain perspective and come back refreshed. While you’re there, take in some history
-        by visiting the Luna 2 and Apollo 11 landing sites.</p>
+      <p>Where you're driving for Pigeon or not, you can still explore and view all of the recent listings in this open
+        sourced protocol. Please take a deeper dive into how our technology works and how we provide opportunities for
+        individuals and entrepreneurs all over the world!</p>
 
       <div class="destination-meta flex">
         <div>
           <h3 class="text-accent fs-200 uppercase">Avg. distance</h3>
-          <p class="ff-serif uppercase">384,400 km</p>
+          <p class="ff-serif uppercase">18 Miles</p>
         </div>
         <div>
           <h3 class="text-accent fs-200 uppercase">Est. travel time</h3>
-          <p class="ff-serif uppercase">3 days</p>
+          <p class="ff-serif uppercase">30 Minutes</p>
         </div>
+
       </div>
     </article>
 
-    <!-- Mars -->
+    <!-- Mars / Filters -->
     <article hidden class="destination-info flow" id="mars-tab" tabindex="0" role="tabpanel">
-      <h2 class="fs-800 uppercase ff-serif">Mars</h2>
+      <h2 class="fs-700 uppercase text-secondary ff-serif">Filters</h2>
 
-      <p>Don’t forget to pack your hiking boots. You’ll need them to tackle Olympus Mons,
-        the tallest planetary mountain in our solar system. It’s two and a half times
-        the size of Everest!</p>
+      <p>You're able to filter packages by selecting through an array of options, ranging from the price of the
+        delivery, overall distance, package weight and if the package has special instructions.</p>
 
       <div class="destination-meta flex">
         <div>
@@ -101,14 +104,13 @@
       </div>
     </article>
 
-    <!-- Europa -->
+    <!-- Europa / Sorting & Regions -->
     <article hidden class="destination-info flow" id="europa-tab" tabindex="0" role="tabpanel">
-      <h2 class="fs-800 uppercase ff-serif">Europa</h2>
+      <h2 class="fs-700 uppercase text-secondary ff-serif">Sorting & Regions</h2>
 
-      <p>The smallest of the four Galilean moons orbiting Jupiter, Europa is a
-        winter lover’s dream. With an icy surface, it’s perfect for a bit of
-        ice skating, curling, hockey, or simple relaxation in your snug
-        wintery cabin.</p>
+      <p>Because this dApp is built entirely for global usage to ensure individuals have the freedom to deliver, you're
+        able to select which region to explore packages, and you may still be able fulfill those deliveries if you're a
+        driver. Earn and travel the world!</p>
       <div class="destination-meta flex">
         <div>
           <h3 class="text-accent fs-200 uppercase">Avg. distance</h3>
@@ -121,13 +123,13 @@
       </div>
     </article>
 
-    <!-- Titan -->
+    <!-- Titan / Package Sizes -->
     <article hidden class="destination-info flow" id="titan-tab" tabindex="0" role="tabpanel">
-      <h2 class="fs-800 uppercase ff-serif">Titan</h2>
+      <h2 class="fs-700 uppercase text-secondary ff-serif">Package Sizes</h2>
 
-      <p>The only moon known to have a dense atmosphere other than Earth, Titan
-        is a home away from home (just a few hundred degrees colder!). As a
-        bonus, you get striking views of the Rings of Saturn.</p>
+      <p>Pigeon automatically filters out packages for drivers determined on the package size and the drivers
+        requirements, however you may still explore the listings and register to be eligible to fulfill any sized
+        package!</p>
 
       <div class="destination-meta flex">
         <div>
